# ChangeLog for dev-lisp/uiop
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/uiop/ChangeLog,v 1.10 2014/07/11 08:52:31 patrick Exp $

  11 Jul 2014; Patrick Lauer <patrick@gentoo.org> uiop-3.0.3.ebuild:
  Stable on amd64 #511170

*uiop-3.0.3 (09 Mar 2014)

  09 Mar 2014; Andrey Grozin <grozin@gentoo.org> +uiop-3.0.3.ebuild:
  Version bump

  12 Dec 2013; Chema Alonso <nimiux@gentoo.org> uiop-3.0.2.4.ebuild:
  Revoke stable for amd64 wrt bug #485632

  10 Dec 2013; Chema Alonso <nimiux@gentoo.org> uiop-3.0.2.4.ebuild:
  Stable for amd64 wrt bug #485632

*uiop-3.0.2.4 (14 Oct 2013)

  14 Oct 2013; Andrey Grozin <grozin@gentoo.org> +uiop-3.0.2.4.ebuild:
  Version bump

  12 Aug 2013; Andrey Grozin <grozin@gentoo.org> -uiop-2.33-r1.ebuild:
  Cleaned 2.33 - pre-release of 3.0

*uiop-3.0.2.1 (09 Aug 2013)

  09 Aug 2013; Andrey Grozin <grozin@gentoo.org> +uiop-3.0.2.1.ebuild:
  Version bump

*uiop-3.0.1 (19 May 2013)

  19 May 2013; Andrey Grozin <grozin@gentoo.org> +uiop-3.0.1.ebuild:
  Version bump

  20 Apr 2013; Andrey Grozin <grozin@gentoo.org> uiop-2.33-r1.ebuild:
  Fixed an installation problem, thanks to Tom Wijsman <TomWij@gentoo.org>

*uiop-2.33-r1 (20 Apr 2013)

  20 Apr 2013; Andrey Grozin <grozin@gentoo.org> +uiop-2.33-r1.ebuild,
  +metadata.xml:
  Initial import from the lisp overlay (pmasked)