@@ -1,10 +1,30 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST asdf-3.0.1.tar.gz 388547 SHA256 c47adfe7e125223758c766ef64a63c8d14857f8a2fd027b141bfd9db9470ed55 SHA512 6465a2762e0bc67319cb597f873f4997da1dd2bae409a5ed1d847b9ceab62dee12c24d60aa1015594a8f3927ada93465c821953da5139b194d087d9a020fa08a WHIRLPOOL c82a77be049f4c7c60be6aa78c7263b5be8dc9323a2380a919a9affc28edf13f37eecea2534b047b9b346d7fbf53550042211dfb1b0baa9a90e7a9e81a4a2d43
 DIST asdf-3.0.2.1.tar.gz 389494 SHA256 2413dd0b478dde0202747dd673e271b76de027e7d5144ba15706cca77b23edda SHA512 0dd14c2e8552b0624aa7c7a78a4792bcc2b0a04cd81c35ef0433424f43bd4cdb09abbd7bf36f23dc9848ff74f3bf752d752ff4aca7ce6773c2279ff23d885448 WHIRLPOOL faeec6772c6c64b3dbfe9dad6f60976ad0bc93762f6eeaafbef5838f1711cb0b9a677a85736fd6b120e3f36969a29bee46d6c4e4ad70431df629461dd44110b5
 DIST asdf-3.0.2.4.tar.gz 394304 SHA256 4f156a5cb6fe50092adabc5feee49ade9c366c939129ffea6e760b0edf9dd92c SHA512 af2157693d774004018d416b30144326588effc7b271aba8dfa2bc7981434c58a67e1308f52fb9ab2eb325a5a7f213aafa54f69b66cc333772065fd408577a89 WHIRLPOOL d7bae9732089ad52753f4b75d0ccb0a3372c3804cc327298391eda8efa930569131534cbe3eeb697abed3c1dab571f847c7676a08b79c6a48eea424eac86239d
 DIST asdf-3.0.3.tar.gz 427575 SHA256 05f11d83d33f1080f683701ad0e139011051f9c3190c3b1f22bc63208d8d5f47 SHA512 d9d8d466c7b6aa6beb1c22da4fd10499fa784c39ab138bea7ecb8cdccf769766572ebe91c89db2d5c53e493096248f82a224be95c1fcac8b7beebe1b57f34883 WHIRLPOOL 3503250361350b59d095b743dcc627e9ec1e3ec469066287b80d97924d54ea254fed94f77596ed71b4c9974e4c9b97de8b6a35b3c6529f559d6ba392b695ccf4
-EBUILD uiop-3.0.1.ebuild 907 SHA256 f6602f4fc02049d5bebe11d33d8dd6d35ffa4446a1f0fb363666abc20de81eea SHA512 1633b5136ff8fb687cc7773f023089eb026717b397c85452e14b2e92af265ce288a04d3ead967a71ea45cad7cbf1027aa1fac9a251f78a674948781ee0cc8167 WHIRLPOOL 521819c60305668d0a50c59c60c033f64eab8f40fd74dd2ee6fb0c1acd1f4a62871fb33903883c7da6b77e1994f289263af0229ecba29af1322204927b0f083c
-EBUILD uiop-3.0.2.1.ebuild 909 SHA256 7fb014bebdf55fa9952249b7d593ea6dec3af089dd9676f18310c5aff7264923 SHA512 9864973a82cfb5a13092e7a25096388572a7ef051a20fc413ea40d044014e7235f7689d8d0be053cd067cc4bcf070f23f22f7a590eb4e1ba65918405f4f828ac WHIRLPOOL ca217689e36d38d28bdcbc557b1a0753a98b334c08d9fb64f7faa2806c1de6a06b5bdb73d845afa17cabad52bec37aeae7a320ee7856daa45fc3dc53d2f07ab6
-EBUILD uiop-3.0.2.4.ebuild 909 SHA256 22624f055c58a73e99fc2d36fe09570c5a09d78ccf06ea5c69e1fde2a7fafd6a SHA512 f58e48fa8974142c75ebed35c584f1051ba128944d8d4d57a58fdbca6d656031cdb44544483571d96bc8af33219024ab957f393261f9fa698bc1b50d26bdba9b WHIRLPOOL 000bdc172a28555d2bc946a0b4f4319a0e4ac101a9f9f504ebb1d7d6c833d5a4a19a30ade949260ce55990cca789098f3b1196a069b801b46efd05280177ae67
-EBUILD uiop-3.0.3.ebuild 907 SHA256 485310516d6b3b4b180c6b54e45892172e164bdcdcdbcb8ca508d3ee4fd39649 SHA512 66ff9296bc8372de3ef23ddec5c24f182e0a9fc52bf4a8ad2c788635f75ae5fd9bda3a844bb768e9175c9b9e417134f90ff6cd298c7c6642f12bfd7109f5e6c3 WHIRLPOOL 37a6a99a42500bde4e6ca3ca6143b02c3b8d7185939ef3ce5fc44c5742f085ad5bd5c4926af38368334b9936dc3c7b5624848bcbf363a250aa03c2e8e1346e97
-MISC ChangeLog 1390 SHA256 a28d51a72078a27b92737245e6cad6f0f478bd83dccb6b0d986d31088d282d63 SHA512 7a392458bd854993ef3f3f7a20dc1588df2fd55cce5000fe13c5b70db5babfd86803d7b12c3ad2b56b559c999d799fbd5ebc0a52b5fd7c90310ac240f69c367c WHIRLPOOL 37a941b2ec85e69b2d64ea365b52b0a69b74ee1868c1981b88814c04e391ee7418fd1c41ac8db4e55f07dd83af80cd6b1cd66937f5701dc7904f552865adbed6
+EBUILD uiop-3.0.1.ebuild 916 SHA256 9bbe1b57ab2265d6d6a8a9da1fa8015f12f579fff382752c050c0d870656fc36 SHA512 8ea42216f5e81386ac74cfeba58e071ce37b14d4dce9fa858d03e6851089fe83a52ad665e55f775b83530f6615c551e595d198ea586c65d195c23cd61628e6cf WHIRLPOOL dfe88fba6e73371bbb51b02bb8846bba7c92b56ca0191c302be21981ad90991d65ebb2dd9e0f854070b2a20208aa38c203bbefb6a35b019f33e4ec8788f0e0cd
+EBUILD uiop-3.0.2.1.ebuild 918 SHA256 ae0cc4c62e19a78f7d693091ec6fcf2c96049eb3a3f59354e5933ab1d82cac38 SHA512 3449cc1952e66e399efda6ebe44d9fe9dd273aeb6071cebc802fee09cc53ec3ef8dc9be7fa2a255c72095905860707224a0742415d92f00e896c10aab7a2d247 WHIRLPOOL 5f95a135b737e79b306a90ebbfd335c98727c1baec2e4cfc1ff93be2c67bdfb856b07846fa77067980172f388378df06658b1cfea2d083c63246f99fb36fc767
+EBUILD uiop-3.0.2.4.ebuild 918 SHA256 711881a6122f9d95a04fde87f873bcea0e4c85c9a33c861910d7b78e6f59f628 SHA512 6fdd996941afd5f1f40b6bbaf8c8d943c60676f967add35c3c557848c9f320e46ccfe685d552721d413fc9d7210ed6680e30762759dbc61bcde7888ef998b87f WHIRLPOOL ec6ec130bcc3f41baed70780f303535bb8e83706e54c98b4236da069d6dc763c8d54b72d466757ca73557dba4eb3cad05d2bfcc454c07cd186b42e583f85db5b
+EBUILD uiop-3.0.3.ebuild 915 SHA256 cc10a4f1d1dada47f5bd5d4237df7a2ff2fd5f4b442abb073ccce617690987ed SHA512 847c2a38f15ad410b40c067c15d1bdb8cac33b5b06b552bc2e7f3c6e57b21d882cee7966ac514bb65b8c3e84c1dd8029741688a634992ac8d616f733cd2a0ab6 WHIRLPOOL f44264fc322c390250265a4cb0cc8a924745b2fd0b8d5f7476a76a3abaaf0b598098b5da97192d03eee7efe5c93db525e56e08d6092d069734255c78be5b6394
+MISC ChangeLog 1559 SHA256 6961236dbed9643acc73474e29f47499f1c884f59feaf6fa9a51b9a113d5a1af SHA512 644ceea642f39e12cb25f8e3635c313252def7f651f027681fab2e3689fd5e12b5c2f081ff4b3183b7e686a6a174b7da55f8fec4235e20c11e34d7caec2600c6 WHIRLPOOL af7b1260967d3d4da4e20b6730b32613556cfcec98997cac7e8d8e7e6f6d3e938d39bafd1412d074d4ce528f759c105e3d96203983d44f8f61e958956949cbb3
 MISC metadata.xml 164 SHA256 f8efc9385015233c71f279f85bd0a327525b7136cf8714cc04449d8bea4ce22f SHA512 ace7c0d5238ccdb5397cd6c2ac04eaea32f2740251db4a11397b4d10d12cbe132ffdbe29587028ba937e9ef314d5f7af83d0008f39ae6ec2e63b400545f9853f WHIRLPOOL 8cfe7fa0091d11719b4be13a18b95cad1a2f2d9080306976459b7d629ed18e71068113332053e296b72a9399dce83490e580e2b12ddf16afda3b4a178d2b1814
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJUMCSUAAoJEJOE+m71LUu6vP0QAIj+cizsyikTpAou2LctIvNY
+2YcMzZNFggjWFK/7gy8cPMlcJobwR0ojyXNNyLh45KST3DTdBA4E2UgcUA6r7jCx
+s3H8yBfxn4r7hsp9zm5qClHJsIQuKU9oOKolTcEPJEn/HBWETQt14jq4D+NOvS6x
+eLJgt9G0OfMQeIdLArfWrYvmhm61epHOV14gJnhIaUvDK07UI9EOkB7CJ3r1mdVH
+7zkrrrXKeaik6tHuq1JU9GP+v42DmqenKrWnYqDPO0zYsnXV9P6Uunf2iBE6XZ04
+9AZkVsa4ty7SXA9GD1hYX5yuwQjYjohzXRKJBKqvoQC1E40tfFe8BigYp9ZWDrnT
+cB4k0ELLfCtuERps0hDakaMGtmtCBMQKGrw3/tzGcjSEri5U5Ggm8z4U0j+SPIrX
+bYzblDgHZ93yBeFNRdJrmHuyuUwSpEg2RqDg47mvteo+p4kRIrbYgQX8u6d9E7k4
+sOZ5dB0KbTe4y5Uyi/zRnH24eISXE1ROPg3hD70Wg+aeXU36uhjHwISQxA439+ez
+m4bYlpavsL9uAkqDrON8WFziTnnfLZsTSeLMRNOSyy2sxguoHr+PGfaJF7vd8zQL
+oQXdyb6Et18Lzed41vdJJ9Ve0vcoEA3lvZWlY9SVhoDKQGGiy2U34NuelLQxe+rV
+JNrxZWInSJa0fnOpYcLv
+=DUR8
+-----END PGP SIGNATURE-----
