@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/uiop/uiop-3.0.2.4.ebuild,v 1.3 2013/12/12 09:54:01 nimiux Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/uiop/uiop-3.0.2.4.ebuild,v 1.4 2014/10/04 16:46:35 blueness Exp $
 
 EAPI=5
 inherit eutils
@@ -11,7 +11,7 @@ SRC_URI="http://common-lisp.net/project/asdf/archives/asdf-${PV}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE=""
 
 RDEPEND="~dev-lisp/asdf-${PV}"
