@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/uiop/uiop-3.0.3.ebuild,v 1.2 2014/07/11 08:52:31 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/uiop/uiop-3.0.3.ebuild,v 1.3 2014/10/04 16:46:35 blueness Exp $
 
 EAPI=5
 inherit eutils
@@ -11,7 +11,7 @@ SRC_URI="http://common-lisp.net/project/asdf/archives/asdf-${PV}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="amd64 ~ppc ~sparc ~x86"
+KEYWORDS="amd64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE=""
 
 RDEPEND="~dev-lisp/asdf-${PV}"
