@@ -1,0 +1,25 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST Net-IPv4Addr-0.10.tar.gz 8429 SHA256 3845de4f30b17c842b192cace8879dbb6214de9692cfa70f0aaf0981422a63fe SHA512 66381f9be27c010721970d1af245885379bcc0b57c4c1179fc00e89a53a2d53e7836789b13d4c5f0079fac63d7987e12ee71f3168517ea5e1064d5fe1f7455af WHIRLPOOL 6a44bf67cc932eed37933b7a52002e854fd7a8d8d313d5c172a12eeef41da8f235139d95fe2332c854900d8a4457778486a0e7806e44687cfa7c2e856a312f0e
+EBUILD Net-IPv4Addr-0.100.0.ebuild 309 SHA256 1e29aae743d93575abe22958499ec8640b1a4f685d0d426597d22868b577a3b0 SHA512 79f42c81661cf7d827846a65d995932803551a2e583e595ed1d6536a7b057cd4585caef7f61e41310a06287ac3eb4a48d5173bdb0326535bdebf2f25669a752d WHIRLPOOL 4454321b9211666e257435e42a9fca40c6541b4e52fa29a9cb8a5958aed35d215015c4fb1e194349478cea24d0849b199327fbc47570c09be3f7e3fdf6ae20ac
+MISC metadata.xml 224 SHA256 da5466492b430d142ea569bb11972ace4b95e4c07375d60e75c9b91c39d80c3c SHA512 5b865bf9093fec606960fc64a1a631270e432ef3e12a980da4d911b98e8473d8699ef52e49b46659c72e65f425172bae1e0121ebfa2aa5d08b0d28985fe092d3 WHIRLPOOL bb92d97fde9619ec12123319611284963a6b3a9b1380d7ca7f9f1def48832fc4cd4355887cc3d010d72fa84b0047c34d49d93c36c764a5bab5559da22a0c2850
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCABmBQJUMCUYXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQxNEU5RDcyRDdCMUFGREVGQzBCNDFDMUY2
+RjQ4RDNEQTA1QzJEQURCAAoJEG9I09oFwtrb5kkP/09bntlHGpRh9fosiqb+sj1l
+FEUln+EpbVOwC76HtHh24C4fUAXgtNBCC/Wyh4IO/F1H2czwjumomCSPuSebSL7J
+AlQVN1DJrnYZXyQpLbHeGP7AG1QdqZ6dlCOlt8e0dmw5AVly/0szjIeSABUdmbu0
+ro3xss8Hx9X7HCDY7E4Ix5G23FMVH8OR8YtlhCNfeWBsgD1v7pYNApi8nJj/s+QZ
+05YJcf14OaqYdsOZirTO9vFiYZqk2A/v1V5meidW9xy79lMGI749Hvhpm2nUSeTn
+aB+d5IFkxXd7kMdkQnYCXLGlhAxhgTuJb5LWLPawmSxsIviO5v1vzLC2Kd0r5Nx+
+APCeGNUDTfV70cXtY3KyRW+hmgFqdU8eWMFWhh3Hm7eG/6iVT1nDbCmoHiK9/1DP
++DQD6JBuaDmGYpIW1Sgwwh/+d7rVJsxHvigTUAwjWdGc4OexTk65uf784tMobuDE
+Y3ukZ5S4XDkAOgkVXt9Opo62SAR+UiZXu/fYqMtbqL5gV8bhonHFmW2fXCTvIlE+
+9dm9oqWAGaiGQsnRGUeqbKnog8RFkgP1+X2s/YWRxasGDfj9xz8XO25RbSLTQpnn
+mMIUoDAuhRcF0ZErYpE/mC0UtlfxEbCqgToTwAWh8nMpjc8s6FRzvrdvSpF3K8QZ
+W9Sqb6+Y3xCS6+UJ5nF+
+=VLpM
+-----END PGP SIGNATURE-----
