@@ -1,0 +1,17 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-IPv4Addr/Net-IPv4Addr-0.100.0.ebuild,v 1.1 2014/10/04 17:00:54 mjo Exp $
+
+EAPI=5
+
+MODULE_AUTHOR=FRAJULAC
+MODULE_VERSION=0.10
+inherit perl-module
+
+DESCRIPTION="Perl extension for manipulating IPv4 addresses"
+
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+
+DEPEND=""
+RDEPEND=""
