@@ -2,10 +2,10 @@ DEFINED_PHASES=install
 DESCRIPTION=UIOP is a portability layer spun off ASDF3
 EAPI=5
 HOMEPAGE=http://common-lisp.net/project/asdf/
-KEYWORDS=~amd64 ~ppc ~sparc ~x86
+KEYWORDS=~amd64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=MIT
 RDEPEND=~dev-lisp/asdf-3.0.2.4
 SLOT=0
 SRC_URI=http://common-lisp.net/project/asdf/archives/asdf-3.0.2.4.tar.gz
 _eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=9ff85a19cad09cb45d42f005d1098060
+_md5_=14997766ea7c452ac41abed9e1c1d7cc
