@@ -1,0 +1,10 @@
+# ChangeLog for dev-perl/Net-IPv4Addr
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-IPv4Addr/ChangeLog,v 1.1 2014/10/04 17:00:54 mjo Exp $
+
+*Net-IPv4Addr-0.100.0 (04 Oct 2014)
+
+  04 Oct 2014; Michael Orlitzky <mjo@gentoo.org> +Net-IPv4Addr-0.100.0.ebuild,
+  +metadata.xml:
+  New package: dev-perl/Net-IPv4Addr, a Perl extension for manipulating IPv4
+  addresses. Fixes bugs #201408 and #312617.
